# Multistep-DEVS-Simulator

./: .gitignore  Dockerfile  LAYOUT.md  README.md  Readme.md
.claude/skills/develop-spec/: SKILL.md
.claude/skills/devs/: SKILL.md
.claude/skills/fit-spec/: SKILL.md
.github/workflows/: cmake-multi-platform.yml  tests.yml  typecheck.yml
.mulch/: mulch.config.yaml
.mulch/expertise/: code-generation.jsonl  devs-framework.jsonl  workspace.jsonl
.opencode/: opencode.json
code/: pyrefly.toml  requirements-dev.txt  requirements.txt
code/nodes-gui/: .gitignore  CMakeLists.txt
code/nodes-gui/src/: CMakeLists.txt  main.c
code/simulator/: .gitignore  requirements.txt
code/simulator/src/devs/: Atomic.py  AtomicGraph.py  AtomicGroup.py  AtomicGroups.py  Port.py  Types.py
code/simulator/src/ui/: App.py  blocks.py  ctypes_utils.py  main.py  nodes_library.py
code/simulator/tests/property/: test_groups.py  test_ports.py  test_single_step.py  test_time_flows_foward.py
code/simulator/tests/unit/: test_ffi.py  test_single_step.py
code/src/devs/: Atomic.py  AtomicGraph.py  AtomicGroup.py  AtomicGroups.py  Constants.py  IdGenerator.py  Simulator.py  Types.py
code/src/ui/: Atomics_Graphs.ini  app.py  card.py  colors.py  connection.py  main.py  toolbar.py  tooltip.py  types.py
code/tests/property/: test_groups.py  test_time_flows_foward.py
design/: .$class diagram.drawio.bkp  class diagram.drawio
design/DEVS diagrams/company/: DEVS module.drawio
design/DEVS diagrams/factories/: DEVS module.drawio
design/UI/: MultistepDevsSimulator UI.penpot
design/UI/MultistepDevsSimulator UI/: manifest.json
design/class diagrams/: class diagram.drawio
images/: .$atomic.drawio.bkp  atomic.drawio
spec files/: Company.md
(+431 files in other folders)
